--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2021"
 
 [dependencies]
 eframe = "0.19.0"
-egui_glow = "0.19.0"
 rfd = "0.10.0"
-rodio = { version = "0.16.0", features = ["symphonia-all"] }
+rodio = { version = "0.16.0", features = ["symphonia-all"], default-features = false }
+
+[profile.release]
+lto = true
