--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-eframe = "0.19.0"
+eframe = { version = "0.19.0", features = ["persistence"] }
+parking_lot = "0.12"
 rfd = "0.10.0"
 rodio = { version = "0.16.0", features = ["symphonia-all"], default-features = false }
 
