Visualise playback in the amplitude plots

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,4 +23,4 @@ lto = true
 # workaround for slow MP3 load times in debug mode
 # see https://github.com/tesselode/kira/issues/24
 [profile.dev.package.symphonia-bundle-mp3]
-# opt-level = 3
+opt-level = 3
