--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ rfd = "0.10.0"
 rgb = "0.8.34"
 serde = "1.0"
 serde_json = "1.0"
+symphonia = { version = "^0.5", features = ["isomp4"] }
 tracing = "0.1.37"
 tracing-subscriber = "0.3.16"
 
