--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -16,14 +16,31 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    - name: setup mold
+      run: |
+        wget https://github.com/rui314/mold/releases/download/v1.7.1/mold-1.7.1-x86_64-linux.tar.gz
+        tar xzf mold-1.7.1-x86_64-linux.tar.gz
+        ls -lhFA mold-1.7.1-x86_64-linux
+        sudo cp mold-1.7.1-x86_64-linux/bin/mold /usr/bin
+    - name: setup gdk-3 and alsa
+      run: |
+        sudo apt-get install -y libgdk-pixbuf2.0-dev libgtk-3-dev libasound2-dev libpulse-dev
+    - name: setup cache
+      uses: actions/cache@v3.0.11
+      with:
+        # A list of files, directories, and wildcard patterns to cache and restore
+        path: target/
+        # An explicit key for restoring and saving the cache
+        key: main
     - name: build
       run: cargo build --verbose --release
-    - name: UPX GitHub Action
+    - name: compress executable
       uses: crazy-max/ghaction-upx@v2.1.0
       with:
+        version: 3.95
         args: --best --lzma --color -v -o afx.upx
         file: target/release/afx
-    - name: Upload a Build Artifact
+    - name: upload build artifacts
       uses: actions/upload-artifact@v3.1.1
       with:
         # Artifact name
@@ -34,7 +51,9 @@ jobs:
           afx.upx
         # The desired behavior if no files are found using the provided path.
         retention-days: 90
-    - name: Automatic Releases
+    - name: test
+      run: cargo test --verbose --release
+    - name: release
       uses: marvinpinto/action-automatic-releases@v1.2.1
       with:
         # GitHub secret token
@@ -49,5 +68,3 @@ jobs:
         files: |
           afx.upx
           target/release/afx
-    - name: Run tests
-      run: cargo test --verbose --release
