--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -37,7 +37,7 @@ jobs:
     - name: compress executable
       uses: crazy-max/ghaction-upx@v2.1.0
       with:
-        version: 3.95
+        version: v3.95
         args: --best --lzma --color -v -o afx.upx
         file: target/release/afx
     - name: upload build artifacts
