--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -10,10 +10,8 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  build:
-
+  build-nix:
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v3
     - name: setup mold
