--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0"
+coz = "0.1"
 eframe = { version = "0.19.0", features = ["persistence"] }
 kira = "0.7.1"
 parking_lot = "0.12"
@@ -19,6 +20,7 @@ tracing = "0.1.37"
 tracing-subscriber = "0.3.16"
 
 [profile.release]
+debug = 1
 codegen-units = 1
 lto = true
 
