--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,3 +1,5 @@
+name: Full cross-platform release
+
 on:
   release:
     types: [published]
@@ -13,6 +15,9 @@ jobs:
         target: [x86_64-pc-windows-gnu, x86_64-unknown-linux-musl]
     steps:
       - uses: actions/checkout@master
+      - name: setup gdk-3 and alsa
+        run: |
+          sudo apt-get install -y libgdk-pixbuf2.0-dev libgtk-3-dev libasound2-dev libpulse-dev
       - name: Compile and release
         uses: rust-build/rust-build.action@v1.4.0
         env:
