Refactor into separate modules

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ serde_json = "1.0"
 symphonia = { version = "^0.5", features = ["isomp4"] }
 tracing = "0.1.37"
 tracing-subscriber = "0.3.16"
+tracing-timing = "0.6.0"
 
 [profile.release]
 debug = 1
