--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ anyhow = "1.0"
 eframe = { version = "0.19.0", features = ["persistence"] }
 kira = "0.7.1"
 parking_lot = "0.12"
+rayon = "1.6.0"
 rfd = "0.10.0"
 rgb = "0.8.34"
 serde = "1.0"
@@ -20,7 +21,6 @@ tracing-subscriber = "0.3.16"
 tracing-timing = "0.6.0"
 
 [profile.release]
-debug = 1
 codegen-units = 1
 lto = true
 
