--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,14 +7,16 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0"
+base64 = "0.13.1"
 eframe = { version = "0.19.0", features = ["persistence"] }
 kira = "0.7.1"
+lz4_flex = "0.9.5"
 parking_lot = "0.12"
 rayon = "1.6.0"
 rfd = "0.10.0"
 rgb = "0.8.34"
+rmp-serde = "1.1.1"
 serde = "1.0"
-serde_json = "1.0"
 symphonia = { version = "^0.5", features = ["isomp4"] }
 thread-priority = "0.10.0"
 tracing = "0.1.37"
