--- a/.github/workflows/cross.yml
+++ b/.github/workflows/cross.yml
@@ -1,21 +1,15 @@
 name: cross
 
 on:
-  push:
-    tags:
-      - "v[0-9]+.[0-9]+.[0-9]+"
-      - "latest"
+  workflow_run:
+    workflows: ["Rust"]
+    branches: ["main"]
+    types:
+      - completed
 
 jobs:
-  release:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - env:
-          GH_TOKEN: ${{ github.token }}
-        run: gh release create ${{ github.ref_name }} || exit 0
   assets:
-    needs: release
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
