--- a/.github/workflows/cross.yml
+++ b/.github/workflows/cross.yml
@@ -1,6 +1,9 @@
 name: cross
 
 on:
+  push:
+    branches:
+      - setup/ci
   workflow_run:
     workflows: ["Rust"]
     branches: ["main"]
@@ -74,6 +77,7 @@ jobs:
           cp LICENSE README.md "target/${{ matrix.target }}/release/afx$SUFFIX" "$DIRECTORY"
           7z a "$DIRECTORY.zip" "$DIRECTORY"
           echo "path=$DIRECTORY.zip" >> $GITHUB_OUTPUT
-      - env:
+      - name: Upload artifact
+        env:
           GH_TOKEN: ${{ github.token }}
         run: gh release upload latest ${{ steps.archive.outputs.path }}
