--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,3 +31,13 @@ lto = true
 # see https://github.com/tesselode/kira/issues/24
 [profile.dev.package.symphonia-bundle-mp3]
 opt-level = 3
+
+# cross pre-build hooks
+[target.aarch64-unknown-linux-gnu]
+pre-build = "apk add --no-cache fontconfig-dev gtk+3.0-dev alsa-lib-dev"
+
+[target.x86_64-unknown-linux-gnu]
+pre-build = "apt-get update && apt-get install -y libgtk-3-dev libasound2-dev libfontconfig1-dev"
+
+[target.x86_64-pc-windows-gnu]
+pre-build = "pacman -Sy --noconfirm mingw-w64-x86_64-gtk3 mingw-w64-x86_64-alsa-lib mingw-w64-x86_64-fontconfig"
