--- a/.github/workflows/cross.yml
+++ b/.github/workflows/cross.yml
@@ -12,7 +12,7 @@ on:
 
 jobs:
   assets:
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
+    if: ${{ github.event.workflow_run.conclusion == 'success' || github.ref == 'refs/heads/setup/ci' }}
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
