--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,10 +34,18 @@ opt-level = 3
 
 # cross pre-build hooks
 [target.aarch64-unknown-linux-gnu]
-pre-build = "apk add --no-cache fontconfig-dev gtk+3.0-dev alsa-lib-dev"
+pre-build = [
+    "apk add --no-cache fontconfig-dev gtk+3.0-dev alsa-lib-dev"
+]
 
 [target.x86_64-unknown-linux-gnu]
-pre-build = "apt-get update && apt-get install -y libgtk-3-dev libasound2-dev libfontconfig1-dev"
+pre-build = [
+    "./.github/setup-mold-ubuntu.sh",
+    "apt-get install -y libgtk-3-dev libasound2-dev libfontconfig1-dev"
+]
 
 [target.x86_64-pc-windows-gnu]
-pre-build = "pacman -Sy --noconfirm mingw-w64-x86_64-gtk3 mingw-w64-x86_64-alsa-lib mingw-w64-x86_64-fontconfig"
+pre-build = [
+    "./.github/setup-mold-ubuntu.sh",
+    "pacman -Sy --noconfirm mingw-w64-x86_64-gtk3 mingw-w64-x86_64-alsa-lib mingw-w64-x86_64-fontconfig"
+]
