--- a/Cross.toml
+++ b/Cross.toml
@@ -1,7 +1,8 @@
 # cross pre-build hooks
 [target.aarch64-unknown-linux-gnu]
 pre-build = [
-    "apk add --no-cache fontconfig-dev gtk+3.0-dev alsa-lib-dev"
+    "./.github/setup-mold-ubuntu.sh",
+    "apt-get install -y libgtk-3-dev libasound2-dev libfontconfig1-dev"
 ]
 
 [target.x86_64-unknown-linux-gnu]
@@ -13,5 +14,5 @@ pre-build = [
 [target.x86_64-pc-windows-gnu]
 pre-build = [
     "./.github/setup-mold-ubuntu.sh",
-    "pacman -Sy --noconfirm mingw-w64-x86_64-gtk3 mingw-w64-x86_64-alsa-lib mingw-w64-x86_64-fontconfig"
+    "apt-get install -y libgtk-3-dev libasound2-dev libfontconfig1-dev"
 ]
