--- a/.github/workflows/cross.yml
+++ b/.github/workflows/cross.yml
@@ -51,6 +51,18 @@ jobs:
       - uses: dtolnay/rust-toolchain@stable
         with:
           targets: ${{ matrix.target }}
+      - name: setup cache
+        uses: actions/cache@v3.0.11
+        with:
+          # A list of files, directories, and wildcard patterns to cache and restore
+          path: |
+            ~/.cargo/registry
+            ~/.cargo/git
+            target/
+          # An explicit key for restoring and saving the cache
+          key: ${{ runner.os }}-cross-${{ matrix.target }}-${{ github.ref_name }}-${{ hashFiles('**/Cargo.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-cross-${{ matrix.target }}-
       - name: install cross
         run: cargo install cross --git https://github.com/cross-rs/cross
       - name: build
