--- a/Cross.toml
+++ b/Cross.toml
@@ -1,18 +1,13 @@
 # cross pre-build hooks
-[target.aarch64-unknown-linux-gnu]
+[build]
 pre-build = [
-    "./.github/setup-mold-ubuntu.sh",
-    "apt-get install -y libgtk-3-dev libasound2-dev libfontconfig1-dev"
+    "./afx/afx/.github/setup-mold-ubuntu.sh",
+    "pwd",
+    "DEBIAN_FRONTEND=noninteractive apt-get install -y libgtk-3-dev libasound2-dev libfontconfig1-dev"
 ]
+
+[target.aarch64-unknown-linux-gnu]
 
 [target.x86_64-unknown-linux-gnu]
-pre-build = [
-    "./.github/setup-mold-ubuntu.sh",
-    "apt-get install -y libgtk-3-dev libasound2-dev libfontconfig1-dev"
-]
 
 [target.x86_64-pc-windows-gnu]
-pre-build = [
-    "./.github/setup-mold-ubuntu.sh",
-    "apt-get install -y libgtk-3-dev libasound2-dev libfontconfig1-dev"
-]
