--- a/Cross.toml
+++ b/Cross.toml
@@ -1,10 +1,6 @@
 # cross pre-build hooks
 [build]
-pre-build = [
-    "./afx/afx/.github/setup-mold-ubuntu.sh",
-    "pwd",
-    "DEBIAN_FRONTEND=noninteractive apt-get install -y libgtk-3-dev libasound2-dev libfontconfig1-dev"
-]
+pre-build = ".github/setup-mold-ubuntu.sh"
 
 [target.aarch64-unknown-linux-gnu]
 
