--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,9 @@ tracing = "0.1.37"
 tracing-subscriber = "0.3.16"
 tracing-timing = "0.6.0"
 
+[dev-dependencies]
+tempfile = "3.3.0"
+
 [profile.release]
 codegen-units = 1
 lto = true
