--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ tracing-subscriber = "0.3.16"
 tracing-timing = "0.6.0"
 
 [dev-dependencies]
+approx = "0.5.1"
 tempfile = "3.3.0"
 
 [profile.release]
