--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -56,6 +56,29 @@ jobs:
         retention-days: 90
     - name: test
       run: cargo test --verbose --release
+    - uses: actions/upload-artifact@v4
+      with:
+        name: binaries
+        path: |
+          afx.upx
+          target/release/afx
+  release:
+    needs: build-nix
+    concurrency:
+      group: release
+      cancel-in-progress: false
+    runs-on: ubuntu-latest
+    steps:
+    - name: download artifact
+      uses: actions/download-artifact@v4
+      with:
+        name: binaries
+        path: binaries/
+    - name: delete release
+      continue-on-error: true
+      run: gh release delete latest --cleanup-tag
+      env:
+        GITHUB_TOKEN: ${{ github.token }}
     - name: create release
       if: ${{ github.ref == 'refs/heads/main' }}
       uses: softprops/action-gh-release@v2
@@ -65,8 +88,7 @@ jobs:
         prerelease: true
         fail_on_unmatched_files: true
         files: |
-          afx.upx
-          target/release/afx
+          release-files/*
         name: afx preview
         tag_name: latest
     - name: publish release
